feat: add final layout to & style reviews section

--- a/projects/29-restaurant/index.html
+++ b/projects/29-restaurant/index.html
@@ -53,7 +53,7 @@
       <section id="about">
         <article class="about_article">
           <h2>Just the right food</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+          <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-big">
           <p class="about_text">
             If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back
             for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees
@@ -69,7 +69,7 @@
       <section id="ingredients">
         <article>
           <h2 class="ingredients_heading">Fine Ingredients</h2>
-          <img src="img/divider-white.png" alt="divider-gold" class="divider">
+          <img src="img/divider-white.png" alt="divider-gold" class="divider_margin-big">
           <p class="ingredients_text">
             If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back
             for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees
@@ -90,13 +90,15 @@
         <div class="menu-groups">
           <div class="menu-left">
             <article class="menu_group">
-              <h2>Appetiser</h2>
-              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+              <div class="menu-header">
+                <h2>Appetiser</h2>
+                <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
+              </div>
 
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Tzatsiki</h3>
-                  <div>$3.99</div>
+                  <h3>$3.99</h3>
                 </div>
                 <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
               </div>
@@ -104,7 +106,7 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Aubergine Salad</h3>
-                  <div>$5.50</div>
+                  <h3>$5.50</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
@@ -112,31 +114,33 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Aubergine Salad</h3>
-                  <div>$5.25</div>
+                  <h3>$5.25</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
             </article>
 
             <article class="menu_group">
-              <h2 class="menu_heading">Salads</h2>
-              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+              <div class="menu-header salads">
+                <h2>Salads</h2>
+                <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
+              </div>
 
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Olive Special</h3>
-                  <div>$5.99</div>
+                  <h3>$5.99</h3>
                 </div>
                 <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
               </div>
+
               <div class="special">
                 <p>Special</p>
               </div>
-
-              <div class="menu_item">
+              <div class="menu_item yellow-border">
                 <div class="food-price">
                   <h3>Greek Salad</h3>
-                  <div>$5.50</div>
+                  <h3>$5.50</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
@@ -144,7 +148,7 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Gusto Salad</h3>
-                  <div>$5.25</div>
+                  <h3>$5.25</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
@@ -153,13 +157,15 @@
 
           <div class="menu-right">
             <article class="menu_group">
-              <h2 class="menu_heading">Starters</h2>
-              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+              <div class="menu-header">
+                <h2>Starters</h2>
+                <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
+              </div>
 
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Haloumi</h3>
-                  <div>$3.99</div>
+                  <h3>$3.99</h3>
                 </div>
                 <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
               </div>
@@ -167,20 +173,22 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Spinach Pie</h3>
-                  <div>$5.50</div>
+                  <h3>$5.50</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
             </article>
 
             <article class="menu_group">
-              <h2 class="menu_heading">Main Dishes</h2>
-              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+              <div class="menu-header dishes">
+                <h2>Main Dishes</h2>
+                <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
+              </div>
 
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Cornish Mackerel</h3>
-                  <div>$5.99</div>
+                  <h3>$5.99</h3>
                 </div>
                 <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
               </div>
@@ -188,10 +196,10 @@
               <div class="special">
                 <p>Special</p>
               </div>
-              <div class="menu_item lamb">
+              <div class="menu_item yellow-border">
                 <div class="food-price">
                   <h3>Roast Lamb</h3>
-                  <div>$5.50</div>
+                  <h3>$5.50</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
@@ -199,7 +207,7 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Fried Chicked</h3>
-                  <div>$5.25</div>
+                  <h3>$5.25</h3>
                 </div>
                 <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
               </div>
@@ -207,7 +215,7 @@
               <div class="menu_item">
                 <div class="food-price">
                   <h3>Pastitsio</h3>
-                  <div>$5.99</div>
+                  <h3>$5.99</h3>
                 </div>
                 <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
               </div>
@@ -217,23 +225,24 @@
       </section>
 
       <!-- Reviews -------------------------->
-      <section class="reviews_wrapper">
-        <article>
+      <section id="reviews">
+        <article class="reviews_article">
           <h2 class="reviews_heading">Guest Reviews</h2>
-          <img src="img/divider-gold.png" class="divider" />
+          <img src="img/divider-white.png" class="divider_margin-small" />
           <div class="reviews_content">
-            <img src="img/quote.png" class="quote_sign" />
+            <!-- <i class="fas fa-quote-left quote" aria-hidden="true"></i> -->
+            <div><img src="img/quote.png" /></div>
             <blockquote class="reviews_text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what
               keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda
               cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!
-              <p class="reviews_user">-food inc, New York</p>
             </blockquote>
           </div>
+          <p class="reviews_user">- food inc, New York</p>
         </article>
       </section>
 
       <!-- Reservations -------------------->
-      <section class="reservations_wrapper">
+      <section id="reservations">
         <div class="images_left">
           <img src="img/reservation-left.jpg" alt="left-image">
           <img src="img/reservation-right.jpg" alt="right-image">
@@ -262,7 +271,7 @@
     </main>
 
     <!-- FOOTER ---------------------------->
-    <footer class="footer_wrapper">
+    <footer id="footer">
       <article class="about">
         <h3 class="about_heading">About Us</h3>
         <img src="img/divider-white.png" alt="divider-white" class="divider-white">
