fix: make footer stick to bottom, responsive menu, add fonts

--- a/projects/29-restaurant/index.html
+++ b/projects/29-restaurant/index.html
@@ -5,22 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/css/all.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="fonts/css/all.css">
+  <link rel="stylesheet" href="style/main.css">
   <title>Restaurant</title>
 </head>
 
 <body>
   <div class="wrapper">
     <!-- HEADER --------------------->
-    <header>
+    <header class="hide">
       <!-- Navigation ----------------->
-      <section class="nav_wrapper">
+      <section class="nav_wrapper flex-between">
         <a href="#home" class="logo">
           <img src="img/logo.png" alt="logo">
         </a>
         <div class="menu_wrapper">
-          <nav class="nav_menu">
+          <nav class="nav_menu flex-between">
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#ingredients">Ingredients</a>
@@ -28,7 +28,7 @@
             <a href="#reviews">Reviews</a>
             <a href="#reservations">Reservations</a>
           </nav>
-          <div class="social_icons">
+          <div class="social_icons flex-center">
             <a href="https://twitter.com/"><i class="fab fa-twitter social_icon" aria-hidden="true"></i></a>
             <a href="https://youtube.com/"><i class="fab fa-youtube social_icon" aria-hidden="true"></i></a>
             <a href="https://facebook.com/"><i class="fab fa-facebook social_icon" aria-hidden="true"></i></a>
@@ -37,12 +37,12 @@
       </section>
 
       <!-- Promotion ----------------------->
-      <section class="promo">
+      <section class="promo flex-center text-center">
         <h1 class="promo_heading">the right ingredients for the right food</h1>
         <img src="img/divider-top.png" class="divider" />
         <div class="promo_btns">
-          <button class="btn-black btn">BOOK A TABLE</button>
-          <button class="btn-white btn">SEE THE MENU</button>
+          <button class="promo_btn">BOOK A TABLE</button>
+          <button class="promo_btn">SEE THE MENU</button>
         </div>
       </section>
     </header>
@@ -50,8 +50,8 @@
     <!-- MAIN ------------------------------>
     <main>
       <!-- About --------------------------->
-      <section id="about">
-        <article class="about_article">
+      <section class="about flex-center hide">
+        <article class="about_article text-center">
           <h2>Just the right food</h2>
           <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-big">
           <p class="about_text">
@@ -66,7 +66,7 @@
       </section>
 
       <!-- Ingredients ---------------------->
-      <section id="ingredients">
+      <section class="ingredients flex-center text-center hide">
         <article>
           <h2 class="ingredients_heading">Fine Ingredients</h2>
           <img src="img/divider-white.png" alt="divider-gold" class="divider_margin-big">
@@ -84,19 +84,19 @@
       </section>
 
       <!-- Menu ----------------------------->
-      <section id="menu">
+      <section class="menu flex-center hide">
         <div class="menu-background"></div>
         <!-- Emmet Magic:(article.menu_group>h2.menu_heading{menu heading}+img[src="img/divider-gold.png"][alt="divider-gold"].divider-gold+(.menu_item>.food{foodname}+.price{foodprice}+p.description{food description})*3)*4 -->
-        <div class="menu-groups">
+        <div class="menu-groups flex-between">
           <div class="menu-left">
             <article class="menu_group">
-              <div class="menu-header">
+              <div class="text-center">
                 <h2>Appetiser</h2>
                 <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Tzatsiki</h3>
                   <h3>$3.99</h3>
                 </div>
@@ -104,7 +104,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Aubergine Salad</h3>
                   <h3>$5.50</h3>
                 </div>
@@ -112,7 +112,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Aubergine Salad</h3>
                   <h3>$5.25</h3>
                 </div>
@@ -121,13 +121,13 @@
             </article>
 
             <article class="menu_group">
-              <div class="menu-header salads">
+              <div class="text-center salads">
                 <h2>Salads</h2>
                 <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Olive Special</h3>
                   <h3>$5.99</h3>
                 </div>
@@ -138,7 +138,7 @@
                 <p>Special</p>
               </div>
               <div class="menu_item yellow-border">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Greek Salad</h3>
                   <h3>$5.50</h3>
                 </div>
@@ -146,7 +146,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Gusto Salad</h3>
                   <h3>$5.25</h3>
                 </div>
@@ -157,13 +157,13 @@
 
           <div class="menu-right">
             <article class="menu_group">
-              <div class="menu-header">
+              <div class="text-center">
                 <h2>Starters</h2>
                 <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Haloumi</h3>
                   <h3>$3.99</h3>
                 </div>
@@ -171,7 +171,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Spinach Pie</h3>
                   <h3>$5.50</h3>
                 </div>
@@ -180,13 +180,13 @@
             </article>
 
             <article class="menu_group">
-              <div class="menu-header dishes">
+              <div class="text-center dishes">
                 <h2>Main Dishes</h2>
                 <img src="img/divider-gold.png" alt="divider-gold" class="divider_margin-small">
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Cornish Mackerel</h3>
                   <h3>$5.99</h3>
                 </div>
@@ -197,7 +197,7 @@
                 <p>Special</p>
               </div>
               <div class="menu_item yellow-border">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Roast Lamb</h3>
                   <h3>$5.50</h3>
                 </div>
@@ -205,7 +205,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Fried Chicked</h3>
                   <h3>$5.25</h3>
                 </div>
@@ -213,7 +213,7 @@
               </div>
 
               <div class="menu_item">
-                <div class="food-price">
+                <div class="food-price flex-between">
                   <h3>Pastitsio</h3>
                   <h3>$5.99</h3>
                 </div>
@@ -225,8 +225,8 @@
       </section>
 
       <!-- Reviews -------------------------->
-      <section id="reviews">
-        <article class="reviews_article">
+      <section class="reviews flex-center hide">
+        <article class="reviews_article text-center">
           <h2 class="reviews_heading">Guest Reviews</h2>
           <img src="img/divider-white.png" class="divider_margin-small" />
           <div class="reviews_content">
@@ -242,28 +242,39 @@
       </section>
 
       <!-- Reservations -------------------->
-      <section id="reservations">
-        <div class="images_left">
+      <section class="reservations flex-center text-center hide">
+        <div class="reserv-background"></div>
+        <div class="images_left flex-between">
           <img src="img/reservation-left.jpg" alt="left-image">
           <img src="img/reservation-right.jpg" alt="right-image">
         </div>
         <form action="submit">
           <h2>Just the right food</h2>
-          <img src="img/divider-gold.png" alt="divider" class="divider">
+          <img src="img/divider-gold.png" alt="divider" class="divider_margin-big">
           <p class="reservations_text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps
             our customers coming back for more. Perfect materials and freshly baked food.</p>
+          <br>
           <p class="reservations_text">
             Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!
             Perfect materials and freshly baked food.</p>
-          <div class="input_fields">
-            <div class="input_name">Name</div>
-            <input type="text" placeholder="your name *">
-            <div class="input_name">Name</div>
-            <input type="text" placeholder="date *">
-            <div class="input_name">Date</div>
-            <input type="number" placeholder="your email *">
-            <div class="input_name">Party number</div>
-            <input type="number" placeholder="party number">
+          <div class="input_fields flex-between">
+            <div class="input_left">
+              <h4 class="input_name">Name</h4>
+              <input type="text" placeholder="your name *" class="input_field active">
+              <h4 class="input_name">Date</h4>
+              <input type="text" placeholder="date *" onfocus="(this.type='date')" class="input_field date">
+            </div>
+            <div class="input_right">
+              <h4 class="input_name">Email</h4>
+              <input type="email" placeholder="your email *" class="input_field">
+              <h4 class="input_name">Party number</h4>
+              <select class="dropdown input_field">
+                <option disabled selected>party number</option>
+                <option value="one">One</option>
+                <option value="two">Two</option>
+                <option value="three">Three</option>
+              </select>
+            </div>
           </div>
           <button class="form_btn">Book now!</button>
         </form>
@@ -271,17 +282,17 @@
     </main>
 
     <!-- FOOTER ---------------------------->
-    <footer id="footer">
-      <article class="about">
+    <footer class="footer flex-center">
+      <article class="about-us">
         <h3 class="about_heading">About Us</h3>
-        <img src="img/divider-white.png" alt="divider-white" class="divider-white">
+        <img src="img/divider-white.png" alt="divider-white" class="divider_margin-small">
         <p class="about_text">Lambda's new and expanded Chelsea location represents a truly authentic Greek patisserie,
           featuring breakfasts of fresh croissants and steaming bowls of café. Lamda the best restaurant in town</p>
       </article>
 
       <article class="hours">
         <h3 class="hours_heading">Opening Hours</h3>
-        <img src="img/divider-white.png" alt="divider-white" class="divider-white">
+        <img src="img/divider-white.png" alt="divider-white" class="divider_margin-small">
         <p class="hours_text">Mon-Thu: 7:00am-8:00pm
           <br> Fri-Sun: 7:00am-10:00pm
         </p>
