refactor: resume update

--- a/index.html
+++ b/index.html
@@ -342,8 +342,7 @@
 
             <!-- About Section Button -->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1V_NN2V8-MW2kMpZutdDKuanb0GKT_uWM/view?usp=sharing
-                " target="_blank">
+                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1Xnym2hUAhAGY_SKPyk59YO3yf0oaK2_3/view?usp=sharing" target="_blank">
                     <i class="fas fa-download mr-2"></i>Resume</a>
             </div>
 
